{
    "name": "InputMaster",
    "maps": [
        {
            "name": "BasketBall",
            "id": "1826ce5e-c553-4964-8d6c-cd0c527770fa",
            "actions": [
                {
                    "name": "Grab_R",
                    "type": "Button",
                    "id": "c8a25fa3-cbe9-47cc-a2f9-786900e6aff8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab_L",
                    "type": "Button",
                    "id": "c5d4023f-ecf8-4f8a-adc6-7e01048083ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnBall",
                    "type": "Button",
                    "id": "26c7622c-8c07-4d24-9347-8bd473e5533c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb1ab3ec-d04a-414a-8436-6ef703c21835",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Grab_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c7938d6-c573-453d-8ebf-dadd8663b54a",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08dd3853-8c81-4e38-82c9-4ad4b9a12bb0",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Grab_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dab134f-f4eb-40de-8504-a0398ae5793f",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cef3cf06-11f4-4357-9d7d-c1f257fea2d0",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "BBall",
            "bindingGroup": "BBall",
            "devices": []
        }
    ]
}